# sampler

./: README.md  package-lock.json  package.json  vite.config.ts
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_init.sql
src-tauri/src/: main.rs
src-tauri/src/app/: commands.rs  logger.rs  mod.rs  state.rs
src-tauri/src/audio/: analyzer.rs  classify.rs  metadata_parser.rs  mod.rs  waveform.rs
src-tauri/src/db/: mod.rs  schema.sql
src-tauri/src/vault/: mod.rs  scanner.rs  taxonomy.rs  watcher.rs
src/lib/: store.svelte.ts
src/lib/backup/: +backup.svelte
src/lib/components/browser/: BulkSidebar.svelte  CollectionsGrid.svelte  EmptyLibrary.svelte  FilterMenu.svelte  Pagination.svelte  SampleRow.svelte  ScannerControls.svelte  SortMenu.svelte
src/lib/components/editor/: MetadataEditor.svelte  SamplerModal.svelte
src/lib/components/layout/: Header.svelte  PlayerFooter.svelte
src/lib/components/settings/: SettingsView.svelte
src/lib/stores/: editor.svelte.ts  scanner.svelte.ts
src/lib/types/: index.ts
src/lib/utils/: audio.ts  drag.ts  format.ts  tags.ts  window.ts
src/routes/: +layout.svelte  +page.svelte
