[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tokio = { version = "1.50.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }
notify = "8.2.0"
symphonia = { version = "0.5.5", features = ["all"] }
uuid = { version = "1.20.0", features = ["v4"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
futures = "0.3.32"
walkdir = "2.5.0"
notify-debouncer-mini = "0.7.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.4"
aho-corasick = "1.1.2"
regex = "1.10"
rodio = "0.17.3"
lofty = "0.18"  # Der Industriestandard für Audio-Metadaten in Rust
sha2 = "0.10"   # Für die Deduplizierung
hound = "3.5"

# --- AUDIO PROCESSING ---
# hound entfernt: Symphonia übernimmt alle Formate (WAV, MP3, FLAC, AIFF, OGG, M4A)
# sha2 entfernt: Fast-Fingerprint (size+mtime) ersetzt vollständigen SHA256-Hash
rubato = "0.15.0"
ssstretch = "0.1.0"
tauri-plugin-drag = "2.1.0"

[profile.dev.package."*"]
opt-level = 3
